--- a/test.html
+++ b/test.html
@@ -1,3 +1,14 @@
-<h1>Hey. I'm a big heading</h1>
-<p>Hey. I'm a paragrapgh element. Cool huh?</p>
-<a href="https://google.com" target="_blank" title="Lets go to Google">Click me! I'm a link!</a>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Test page</title>
+</head>
+<body>
+	<h1>Hey. I'm a big heading</h1>
+	<p>Hey. I'm a <b>paragrapgh</b> element. Cool huh?</p>
+	<a href="https://google.com" target="_blank" title="Lets go to Google">Click me! I'm a link!</a>
+	<p>My name is:<br>
+	kitty cat</p>
+	<img src="img/cat.jpeg">
+</body>
+</html>
